app/assets/stylesheets/components/_video.scss
.video-box {
  height: 630px;
  overflow: hidden;
  .video-message {
    height: 100%;
  }
  #remote-media video {
    height: 340px;
    margin-left: 0px;
  }
}

#video-info-container{
  position: relative;
  background-color: black;
  height: 150px;
  width: 100%;
  padding: 10px;
  color: white;
  border-radius: 3px;
  box-shadow: 1px 2px 2px gray;
  overflow: scroll;
}

#video-info-share-container{
  position: relative;
  background-color: white;
  height: 150px;
  width: 100%;
  padding: 10px;
  color: white;
  border-radius: 3px;
  box-shadow: 1px 2px 2px gray;
  overflow: scroll;
}

#video-info-container h4{
  position: absolute;
  top: 28px;
  color: white;
  margin-right: 70px;
}

#video-info-share-container h4{
  position: absolute;
  top: 45px;
  color: $gunmetal;
  margin-right: 70px;
}

#video-info-share-container h5{
  color: $gunmetal;
}

#video-info-description{
  position: absolute;
  top: 61px;
  color: white;
  height: auto;
  margin-right: 170px;
}

#video-info-share-description{
  position: absolute;
  top: 81px;
  color: $gunmetal;
  margin-right: 170px;
}

.video-info-card-date {
  position: absolute;
  top: 10px;
  right: 15px;
  font-size: 15px;
  font-weight: bold;
  p {
    padding: 4px;
    color: black;
    background: $green;
    border-radius: 2px;
  };
}

#share-buttons{
  position: absolute;
  right: 15px;
  top: 115px;
  display: flex;
  text-align: center;
}

#new-follower{
  position: absolute;
  right: 24px;
  top: -10px;
}

#cat-name{
  position: absolute;
  left: 10px;
  top: 6px;
}

@media (max-width: 506px) {
  #local-media video {
    height: 300px;
    margin-left: 0px;
  }

  #remote-media video {
    height: 300px;
    margin-left: 0px;
  }
}

@media (max-width: 449px) {
  #local-media video {
    height: 250px;
    margin-left: 0px;
  }

  #remote-media video {
    height: 250px;
    margin-left: 0px;
  }
}

#stream-time{
  // position: absolute;
  // top: 50%;
  // left: 50%;
}

.video-message {
  width: 100%;
  height: 100%;
}

.countdown-title {
  // background: rgba(255,255,255,0.7);
  width: 1200px;
  height: 300px;
  padding: 30px;
  border-radius: 5px;
  text-align: center;
  font-size: 35px;
  position: relative;
  margin-bottom: 20px;
}

.over-message {
  font: 20px;
  color: $gunmetal;
  padding: 200px;
}

.video-title {
 width: 800px;
 margin: auto;
}

.viewers {
  position: absolute;
  right: 16px;
  top: 70px;
}

#viewerscount {
  color: white;
  // position: absolute;
  // right: 16px;
  // top: 70px;
}

.fa-black {
  color: black;
}

